slider bugs on range shift

--- a/src/components/about_us/about_us.scss
+++ b/src/components/about_us/about_us.scss
@@ -116,6 +116,11 @@
       background-size: 60%;
       border-radius: $main-border-radius;
 
+      &::before {
+        counter-increment: images;
+        content: 'IMAGE ' counter(images);
+      }
+
       &-wrapp {
         height: inherit;
         display: inline-block;
@@ -133,6 +138,7 @@
     }
 
     &-body {
+      counter-reset: images;
       height: 110px;
       padding: 5px 0;
     }
